// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegoMetricsCalculator calculate 1`] = `
Metrics {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-10",
      "valuesByCategory": Object {
        "someKey": 16,
        "someOtherKey": 9,
      },
    },
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 3,
        "someOtherKey": 13,
      },
    },
  ],
}
`;

exports[`LegoMetricsCalculator calculate with periods 1`] = `
Metrics {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 19,
        "someOtherKey": 22,
      },
    },
  ],
}
`;

exports[`LegoMetricsCalculator calculate with periods and percentage 1`] = `
Metrics {
  "categories": Array [
    "someKey",
    "someOtherKey",
  ],
  "entries": Array [
    DateMetrics {
      "date": "2018-10-11",
      "valuesByCategory": Object {
        "someKey": 46,
        "someOtherKey": 54,
      },
    },
  ],
}
`;

exports[`LegoMetricsCalculator metrics csv data 1`] = `
Array [
  Array [
    "date",
    "someKey",
    "someOtherKey",
  ],
  Array [
    "2018-10-10",
    "16",
    "9",
  ],
  Array [
    "2018-10-11",
    "3",
    "13",
  ],
]
`;
